--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
           <div>
             <div id="main-img-panel" class="main px-0 px-sm-3 px-md-5"></div>
             <div id="thumb-img-panel" class="thumbs"></div>
-            <div id="grid-view-switch">╳</div>
+            <div id="grid-view-switch">
+              <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+    <path fill="white" d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z" />
+</svg>
+            </div>
           </div>
         </div>
       </div>
