added company details

--- a/index.html
+++ b/index.html
@@ -16,17 +16,26 @@
   <div class="container-fluid">
     <div class="row px-3 py-3 flex-column flex-sm-row align-items-stretch">
 
-      <div class="panel col-12 col-sm-3 col-md-2 px-lg-3">
+      <div class="panel col-12 col-sm-3 col-md-2 px-lg-3 d-flex flex-column justify-content-between">
         <div class="row">
 
           <div id="title-panel" class="col-7 col-sm-12">
-            <h1>Ellis Dodwell</h1>
-            <h3>Full Stack Developer</h3>
+            <h1>ellisd</h1>
+            <h3>Software Development & Design</h3>
 
           </div>
           <div id="control-panel" class="col-5 col-sm-12">
           </div>
 
+        </div>
+
+        <div id="company-panel">
+            <p>47 Wellington Sq</p>
+            <p>Hastings</p>
+            <p>TN34 1PN</p>
+            <p>United Kingdom</p>
+            <div style="height:10px;"></div>
+            <p>Registered as Ellisd Ltd in England No. 12882373</p>
         </div>
       </div>
 
@@ -71,13 +80,21 @@
           </svg>
         </a>
 
+        <div id="company-panel-mobile">
+            <p>47 Wellington Sq</p>
+            <p>Hastings</p>
+            <p>TN34 1PN</p>
+            <p>United Kingdom</p>
+            <div style="height:40px;"></div>
+            Registered as Ellisd Ltd in England No. 12882373
+        </div>
+
+
       </footer>
 
     </div>
 
   </div>
-
-
 
 
 </body>
