--- a/xpnsr.html
+++ b/xpnsr.html
@@ -1,5 +1,12 @@
 <html>
-<body>
-<iframe width="100%" height="100%" src="https://script.google.com/macros/s/AKfycbyMyCM_tGCK8JtPe0FFErR492rQQ0W3ZLwXdtpL7wNNt9WL-WI/exec"></iframe>
-</body>
+<title>xpnsr</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">   
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  </head>
+  <frameset rows="100%">
+  <frame src="https://script.google.com/macros/s/AKfycbyMyCM_tGCK8JtPe0FFErR492rQQ0W3ZLwXdtpL7wNNt9WL-WI/exec" 
+         title="xpnsr" 
+         frameborder="0" 
+         noresize="noresize">
+  </frameset>
 </html>
