--- a/finial.html
+++ b/finial.html
@@ -9,38 +9,12 @@
 
 </head>
 
-<body>
+<script src="https://npmcdn.com/vue/dist/vue.js"></script>
 
-  <div class="container-fluid">
-    <div class="row px-3 py-3 flex-column flex-sm-row align-items-stretch">
-
-      <div class="panel col-12 col-sm-3 col-md-2 d-flex flex-column justify-content-between">
-        <div class="row">
-
-          <div id="title-panel" class="col-7 col-sm-12">
-            <h1></h1>
-            <h3></h3>
-
-          </div>
-          <div id="control-panel" class="col-5 col-sm-12">
-          </div>
-
-        </div>
-
-        <div id="company-panel">
-            <p>19 Croftdown Rd</p>
-            <p>London</p>
-            <p>N64BD</p>
-            <p>United Kingdom</p>
-            <div style="height:10px;"></div>
-            <p>Registered as Finial Ltd in England No. XXXXXXXX</p>
-        </div>
-      </div>
-
-      <div id="main-panel" class="panel col-12 col-sm-6 col-md-8">
-        <div id="projects-panel" class="row align-content-start px-0">
-
-          <div id="card-1" class="cardx d-flex flex-column justify-content-center align-items-center">
+<div id="app">
+</div>
+<!--
+  <div id="card-1" class="cardx d-flex flex-column justify-content-center align-items-center">
             <h1>Finial</h1>
             <h3 class="mt-5 font-weight-light">Bespoke Net Zero Off-site Construction for Complex Sites</h3>
           </div>
@@ -57,29 +31,7 @@
               <p>Our approach is information rich and modular in design and construction, utilising repeatable components and details, and parametricising non-standard parts. We are inherently sustainable, increasing urbanity with its associated lower resource footprint, optimising existing built assets with their sunk carbon, choosing a low embodied carbon and low polutant materials, dynamic carbon modelling and designing for disassembly. Stage 2 sustainability includes exploration of re-use and harvested materials, designing for change based upon typology and material characteristics, and partnership with sustainable material resources. We are committed to the design and development of high-quality spaces.</p>
             </div>
 
-        </div>
-      </div>
-
-      <footer id="contact-panel">
-
-        <div id="company-panel-mobile">
-            <p>19 Croftdown Rd</p>
-            <p>London</p>
-            <p>N64BD</p>
-            <p>United Kingdom</p>
-            <div style="height:10px;"></div>
-            <p>Registered as Finial Ltd in England No. XXXXXXXX</p>
-        </div>
-
-
-      </footer>
-
-    </div>
-
-  </div>
-
-
-</body>
+-->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 <script src="finial/js/main.js"></script>
