--- a/birmingham.html
+++ b/birmingham.html
@@ -1,7 +1,8 @@
 <html>
 
 <body>
+    <iframe width="100vw" height="100vh" src="//jsfiddle.net/ellisdod/yuocm6re/203/embedded/result/"
+        allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
 </body>
-<script async src="//jsfiddle.net/ellisdod/yuocm6re/203/embed/result/dark/"></script>
 
 </html>
